# media-framework

./: README.md  ci_build.sh
conf/: README.md  build.sh  controller.php  nginx.conf  transcoder.json
nginx-common/: KLFP-SPEC.md  README.md  config
nginx-kmp-cc-module/: README.md  config
nginx-kmp-in-module/: README.md  config
nginx-kmp-out-module/: README.md  config
nginx-kmp-rtmp-module/: Dockerfile  README.md  config
nginx-live-module/: Dockerfile  README.md  config
nginx-mpegts-kmp-module/: README.md  config
nginx-mpegts-module/: README.md  README.rst  config
nginx-pckg-module/: Dockerfile-front-live-src  Dockerfile-live-front-src  README.md  build.sh  config
nginx-rtmp-kmp-module/: Dockerfile  README.md  config
nginx-rtmp-module/: README.md  config  ngx_rtmp.c  ngx_rtmp.h  ngx_rtmp_access_module.c  ngx_rtmp_amf.c  ngx_rtmp_cmd_module.c  (+19 more)
transcoder/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  Makefile  README.md  config-audio.json  config.json  config2.json  config_v.json  core.h  develop-compose.yml  file_streamer.c  file_streamer.h  http_server.c  http_server.h  install_ffmpeg.sh  libs.h  main.c  receiver_server.c  receiver_server.h  test.py
transcoder/KMP/: KMP.c  KMP.h  kalturaMediaProtocol.h
transcoder/ackHandler/: ackHandler.c  ackHandler.h  ackHandlerInternal.cpp  ackHandlerInternal.h  audioAckMap.cpp  audioAckMap.h  videoAckMap.cpp
transcoder/common/: hash.c  hash.h  json_parser.c  json_parser.h  vector.c  vector.h
transcoder/debug/: file_streamer.c  file_streamer.h  kmp_streamer.c  kmp_streamer.h
transcoder/live-transcoder.xcodeproj/: project.pbxproj
transcoder/live-transcoder.xcodeproj/xcshareddata/xcschemes/: live_transcoder.xcscheme
transcoder/patches/: nvdec_h264.c.patch  vf_framestep.patch
transcoder/service/: TranscoderTask.py  __init__.py  config.py  health.py  logger.py  service_utils.py
transcoder/tests/: Makefile  allfilters.c  config copy.json  config_a.json  config_v.json  test_key_frame_alignment.py
transcoder/transcode/: transcode_codec.c  transcode_codec.h  transcode_dropper.c  transcode_dropper.h  transcode_filter.c  transcode_filter.h  transcode_session.c  transcode_session.h  transcode_session_output.c  transcode_session_output.h
transcoder/utils/: ackHandlerUtils.h  audioAckMap.cpp  audioAckMap.h  cc_atsc_a53.cpp  cc_atsc_a53.h  config.c  config.h  logger.c  logger.h  packetQueue.c  packetQueue.h  policy_provider.c  policy_provider.h  samples_stats.c  samples_stats.h  throttler.c  throttler.h  time_estimator.c  time_estimator.h  utils.c  utils.h
(+933 files in other folders)
